build: Avoid file name length limitation of tar
"csharpdoc" is a bit too long to accommodate long file names with
the version returned from git-version-gen:
  tar: gettext-0.19.6.4-1e74e4/.../csharpdoc/...: file name is too
    long (max 99); not dumped
* gettext-runtime/intl-csharp/doc: Rename from csharpdoc.
* gettext-runtime/intl-cshap/Makefile.am (doc, DOC_FILES): Adjust to the
directory name change.

--- a/gettext-runtime/intl-csharp/Makefile.am
+++ b/gettext-runtime/intl-csharp/Makefile.am
@@ -61,24 +61,24 @@ uninstall-dll:
 
 # C# reference documentation. Requires the pnet tools.
 
-csharpdoc:
-	test -d csharpdoc || mkdir csharpdoc
+doc:
+	test -d doc || mkdir doc
 	csdoc -flibrary-name=GNU.Gettext intl.cs | \
-	csdoc2html -o csharpdoc -fmulti-file -fframes -fcombine-members -fno-namespace-directories -
+	csdoc2html -o doc -fmulti-file -f<frames -fcombine-members -fno-namespace-directories -
 
 intl-csharp.texi: intl.cs
 	csdoc -flibrary-name=GNU.Gettext intl.cs | \
 	csdoc2texi -fembedded -fparent='C#' -o $@ -
 
-all-doc: $(srcdir)/csharpdoc/index.html
+all-doc: $(srcdir)/doc/index.html
 
 DOC_FILES = \
-  csharpdoc/index.html \
-  csharpdoc/namespaces.html \
-  csharpdoc/begin.html \
-  csharpdoc/GNU_Gettext.html \
-  csharpdoc/GNU_Gettext_GettextResourceManager.html \
-  csharpdoc/GNU_Gettext_GettextResourceSet.html
+  doc/index.html \
+  doc/namespaces.html \
+  doc/begin.html \
+  doc/GNU_Gettext.html \
+  doc/GNU_Gettext_GettextResourceManager.html \
+  doc/GNU_Gettext_GettextResourceSet.html
 
 EXTRA_DIST += $(DOC_FILES)
 
