build: Remove ChangeLogs
Generate ChangeLog files at "make dist" time, using
gitlog-to-changelog.  We still keep ChangeLog files under "po" and
"intl" directories, since those files are copied as part of gettext
infrastructure and it is still meaningful to have them there.
* .gitignore: Add ChangeLog files.
* Admin/release-steps: Remove mention of running update-changelog
script.
* Admin/update-changelog: Remove.
* Makefile.am (gen-ChangeLog): New rule.
* autogen.sh: Copy gitlog-to-changelog from gnulib.  Create empty
ChangeLog files to suppress Automake errors.
* gettext-tools/doc/Makefile.am (EXTRA_DIST): Remove ChangeLog.0.
* gettext-tools/man/Makefile.am (EXTRA_DIST): Remove ChangeLog.0.
* gettext-tools/src/Makefile.am (EXTRA_DIST): Remove ChangeLog.0.
* gettext-tools/tests/Makefile.am (EXTRA_DIST): Remove ChangeLog.0.
* gnulib-local/Makefile.am (EXTRA_DIST): Remove ChangeLog files.
* */ChangeLog: Rename to ChangeLog.0 or ChangeLog.1.
* HACKING: Add brief guideline to submit patches.

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,13 @@ stamp-h1
 Makefile.in
 Makefile
 
+/ChangeLog
+/gettext-runtime/ChangeLog
+/gettext-runtime/libasprintf/ChangeLog
+/gettext-tools/ChangeLog
+/gettext-tools/examples/ChangeLog
+
 /build-aux/git-version-gen
+/build-aux/gitlog-to-changelog
 /build-aux/snippet
 /build-aux/test-driver
