--- a/gettext-tools/doc/Makefile.am
+++ b/gettext-tools/doc/Makefile.am
@@ -51,8 +51,7 @@ EXTRA_DIST += $(doc_DATA)
 EXTRA_DIST += \
   iso-639.sed iso-639-2.sed iso-3166.sed \
   ISO_639 ISO_639-2 ISO_3166 ISO_3166_de \
-  texi2html \
-  ChangeLog.0
+  texi2html
 
 iso-639.texi: ISO_639 iso-639.sed
 	$(SED) -f $(srcdir)/iso-639.sed $(srcdir)/ISO_639 > iso-639.tmp
