cldr-plurals: Rewrite XML handling using libxml2
* src/cldr-plurals.c: Include <libxml/tree.h> and
<libxml/parser.h>, instead of "libexpat-compat.h".
(extract_locale, extracted_rules, parser, logical_file_name)
(struct element_state, stack, stack_size, stack_depth)
(ensure_stack_size, start_element_handler, end_element_handler)
(character_data_handler): Remove.
(extract_rules): Rename from extract_rule and rewrite using DOM.
(main): Use extract_rules.
* src/Makefile.am (cldr_plurals_CFLAGS): Add $(INCXML).

--- a/gettext-tools/src/Makefile.am
+++ b/gettext-tools/src/Makefile.am
@@ -239,6 +239,7 @@ recode_sr_latin_SOURCES = recode-sr-latin.c filter-sr-latin.c
 hostname_SOURCES = hostname.c
 urlget_SOURCES = urlget.c
 cldr_plurals_SOURCES = cldr-plural.y cldr-plural-exp.c cldr-plurals.c
+cldr_plurals_CFLAGS = $(AM_CFLAGS) $(INCXML)
 cldr_plurals_LDADD = libgettextsrc.la $(LDADD)
 
 # How to build libgettextsrc.la.
