gnulib-local: Replace libxml2 trio with Gnulib
* gettext-tools/gnulib-lib/.gitignore: Ignore files brought by
gnulib-tool.
* gettext-tools/gnulib-tests/.gitignore: Likewise.
* gnulib-local/lib/libxml/triodef.h: Remove.
* gnulib-local/lib/libxml/trionan.c: Replace it with Gnulib functions.
* gnulib-local/lib/libxml/trionan.h: Remove.
* gnulib-local/modules/libxml (Depends-on): Add 'isinf', 'isnan', and
'signbit'.

--- a/gettext-tools/gnulib-tests/.gitignore
+++ b/gettext-tools/gnulib-tests/.gitignore
@@ -20,12 +20,15 @@
 /getcwd-lgpl.c
 /getpagesize.c
 /ignore-value.h
+/infinity.h
 /init.sh
 /inttypes.in.h
 /lseek.c
 /macros.h
 /mbtowc-impl.h
 /mbtowc.c
+/minus-zero.h
+/nan.h
 /putenv.c
 /read-file.c
 /read-file.h
@@ -114,6 +117,17 @@
 /test-init.sh
 /test-intprops.c
 /test-inttypes.c
+/test-isinf.c
+/test-isnan.c
+/test-isnand-nolibm.c
+/test-isnand.c
+/test-isnand.h
+/test-isnanf-nolibm.c
+/test-isnanf.c
+/test-isnanf.h
+/test-isnanl-nolibm.c
+/test-isnanl.c
+/test-isnanl.h
 /test-iswblank.c
 /test-langinfo.c
 /test-linked_list.c
@@ -126,6 +140,7 @@
 /test-lstat.c
 /test-lstat.h
 /test-malloca.c
+/test-math.c
 /test-mbrtowc-w32-1.sh
 /test-mbrtowc-w32-2.sh
 /test-mbrtowc-w32-3.sh
@@ -204,6 +219,7 @@
 /test-sigaction.c
 /test-signal-h.c
 /test-signal.c
+/test-signbit.c
 /test-sigpipe.c
 /test-sigpipe.sh
 /test-sigprocmask.c
