maint: Use maintainer-makefile from gnulib
* autogen.sh: Pull GNUmakefile, maint.mk, and dependency scripts in
build-aux.
* cfg.mk (update-copyright-env): Adjust for gettext.
* .x-update-copyright: New file.
* .gitignore: Ignore files brought in by gnulib-tool.

--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,14 @@ Makefile
 /gettext-tools/examples/ChangeLog
 /gettext-tools/po/ChangeLog
 
+# Files brought in by gnulib-tool:
+/GNUmakefile
 /build-aux/ar-lib
 /build-aux/git-version-gen
 /build-aux/gitlog-to-changelog
 /build-aux/snippet
 /build-aux/test-driver
+/build-aux/update-copyright
+/build-aux/useless-if-before-free
+/build-aux/vc-list-files
+/maint.mk
