gettext-tools: Use a short name for DLLs on OS/2
OS/2 does not support a DLL name longer than 8 characters.

* gettext-tools/configure.ac (OS2): Define on OS/2.
* gettext-tools/gnulib-lib/Makefile.am (libgettextlib_la_LDFLAGS):
Set a DLL name to gtlib on OS/2.
* gettext-tools/libgettextpo/Makefile.am (libgettextpo_la_LDFLAGS):
Set a DLL name to gtpo on OS/2.
* gettext-tools/src/Makefile.am (libgettextsrc_la_LDFLAGS): Set a DLL
name to gtsrc on OS/2.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -100,10 +100,12 @@ LT_LANG([Windows Resource])
 dnl On mingw and Cygwin, we can activate special Makefile rules which add
 dnl version information to the shared libraries and executables.
 case "$host_os" in
-  mingw* | cygwin*) is_woe32=yes ;;
-  *) is_woe32=no ;;
+  mingw* | cygwin*) special_makefile_rules=woe32 ;;
+  os2*) special_makefile_rules=os2 ;;
+  *) special_makefile_rules=none ;;
 esac
-AM_CONDITIONAL([WOE32], [test $is_woe32 = yes])
+AM_CONDITIONAL([WOE32], [test $special_makefile_rules = woe32])
+AM_CONDITIONAL([OS2], [test $special_makefile_rules = os2])
 
 dnl On Cygwin 1.7.10-1 or later, error_* variables are defined in the
 dnl Cygwin DLL.  To avoid any conflict with gettext DLLs, always link
