--- a/gettext-tools/gnulib-lib/.gitignore
+++ b/gettext-tools/gnulib-lib/.gitignore
@@ -71,6 +71,7 @@
 /diffseq.h
 /dirent-private.h
 /dirent.in.h
+/dirfd.c
 /dosname.h
 /dup-safer-flag.c
 /dup-safer.c
@@ -146,6 +147,8 @@
 /gl_xlist.h
 /glib.in.h
 /glibconfig.in.h
+/hard-locale.c
+/hard-locale.h
 /hash.c
 /hash.h
 /html-ostream.c
