gnulib-local: Add more files to distribution
Problem reported by Xen.
* gnulib-local/Makefile.am (EXTRA_DIST): Regenerate.

--- a/gnulib-local/Makefile.am
+++ b/gnulib-local/Makefile.am
@@ -27,13 +27,15 @@ lib/backupfile.c \
 lib/backupfile.h \
 lib/basename.c \
 lib/basename.h \
+lib/clean-temp.c.diff \
 lib/closeout.c \
 lib/closeout.h \
+lib/diffseq.h.diff \
 lib/error.h.diff \
 lib/error-progname.c \
 lib/error-progname.h \
-lib/exitfail.h.diff \
 lib/execute.c.diff \
+lib/exitfail.h.diff \
 lib/fd-ostream.oo.c \
 lib/fd-ostream.oo.h \
 lib/file-ostream.oo.c \
@@ -43,10 +45,7 @@ lib/fnmatch_loop.c.diff \
 lib/getopt.in.h.diff \
 lib/gettext.h \
 lib/gl_array_list.h.diff \
-lib/gl_linkedhash_list.h.diff \
-lib/glib.in.h \
 lib/glibconfig.in.h \
-lib/glib/README \
 lib/glib/ghash.c \
 lib/glib/ghash.in.h \
 lib/glib/glist.c \
@@ -59,6 +58,9 @@ lib/glib/gstrfuncs.in.h \
 lib/glib/gstring.c \
 lib/glib/gstring.in.h \
 lib/glib/gtypes.in.h \
+lib/glib.in.h \
+lib/glib/README \
+lib/gl_linkedhash_list.h.diff \
 lib/hash.c \
 lib/hash.h \
 lib/html-ostream.oo.c \
@@ -67,7 +69,6 @@ lib/html-styled-ostream.oo.c \
 lib/html-styled-ostream.oo.h \
 lib/iconv-ostream.oo.c \
 lib/iconv-ostream.oo.h \
-lib/libcroco/README \
 lib/libcroco/cr-additional-sel.c \
 lib/libcroco/cr-additional-sel.h \
 lib/libcroco/cr-attr-sel.c \
@@ -98,10 +99,10 @@ lib/libcroco/cr-pseudo.c \
 lib/libcroco/cr-pseudo.h \
 lib/libcroco/cr-rgb.c \
 lib/libcroco/cr-rgb.h \
-lib/libcroco/cr-sel-eng.c \
-lib/libcroco/cr-sel-eng.h \
 lib/libcroco/cr-selector.c \
 lib/libcroco/cr-selector.h \
+lib/libcroco/cr-sel-eng.c \
+lib/libcroco/cr-sel-eng.h \
 lib/libcroco/cr-simple-sel.c \
 lib/libcroco/cr-simple-sel.h \
 lib/libcroco/cr-statement.c \
@@ -122,29 +123,24 @@ lib/libcroco/cr-utils.c \
 lib/libcroco/cr-utils.h \
 lib/libcroco/libcroco-config.h \
 lib/libcroco/libcroco.h \
-lib/libxml/COPYING \
-lib/libxml/DOCBparser.c \
-lib/libxml/DOCBparser.in.h \
-lib/libxml/HTMLparser.c \
-lib/libxml/HTMLparser.in.h \
-lib/libxml/HTMLtree.c \
-lib/libxml/HTMLtree.in.h \
-lib/libxml/README \
-lib/libxml/SAX.c \
-lib/libxml/SAX2.c \
-lib/libxml/SAX2.in.h \
-lib/libxml/SAX.in.h \
+lib/libcroco/README \
+lib/libxml/buf.c \
+lib/libxml/buf.h \
 lib/libxml/c14n.c \
 lib/libxml/c14n.in.h \
 lib/libxml/catalog.c \
 lib/libxml/catalog.in.h \
 lib/libxml/chvalid.c \
 lib/libxml/chvalid.in.h \
+lib/libxml/COPYING \
 lib/libxml/debugXML.c \
 lib/libxml/debugXML.in.h \
 lib/libxml/dict.c \
 lib/libxml/dict.in.h \
+lib/libxml/DOCBparser.c \
+lib/libxml/DOCBparser.in.h \
 lib/libxml/elfgcchack.h \
+lib/libxml/enc.h \
 lib/libxml/encoding.c \
 lib/libxml/encoding.in.h \
 lib/libxml/entities.c \
@@ -154,6 +150,10 @@ lib/libxml/globals.c \
 lib/libxml/globals.in.h \
 lib/libxml/hash.c \
 lib/libxml/hash.in.h \
+lib/libxml/HTMLparser.c \
+lib/libxml/HTMLparser.in.h \
+lib/libxml/HTMLtree.c \
+lib/libxml/HTMLtree.in.h \
 lib/libxml/legacy.c \
 lib/libxml/libxml.h \
 lib/libxml/list.c \
@@ -168,15 +168,23 @@ lib/libxml/parserInternals.c \
 lib/libxml/parserInternals.in.h \
 lib/libxml/pattern.c \
 lib/libxml/pattern.in.h \
+lib/libxml/README \
 lib/libxml/relaxng.c \
 lib/libxml/relaxng.in.h \
+lib/libxml/save.h \
+lib/libxml/SAX2.c \
+lib/libxml/SAX2.in.h \
+lib/libxml/SAX.c \
+lib/libxml/SAX.in.h \
 lib/libxml/schemasInternals.in.h \
 lib/libxml/schematron.c \
 lib/libxml/schematron.in.h \
 lib/libxml/threads.c \
 lib/libxml/threads.in.h \
+lib/libxml/timsort.h \
 lib/libxml/tree.c \
 lib/libxml/tree.in.h \
+lib/libxml/trionan.c \
 lib/libxml/uri.c \
 lib/libxml/uri.in.h \
 lib/libxml/valid.c \
@@ -185,11 +193,11 @@ lib/libxml/xinclude.c \
 lib/libxml/xinclude.in.h \
 lib/libxml/xlink.c \
 lib/libxml/xlink.in.h \
-lib/libxml/xmlIO.c \
-lib/libxml/xmlIO.in.h \
 lib/libxml/xmlautomata.in.h \
 lib/libxml/xmlerror.in.h \
 lib/libxml/xmlexports.in.h \
+lib/libxml/xmlIO.c \
+lib/libxml/xmlIO.in.h \
 lib/libxml/xmlmemory.c \
 lib/libxml/xmlmemory.in.h \
 lib/libxml/xmlmodule.c \
@@ -216,6 +224,8 @@ lib/libxml/xpath.in.h \
 lib/libxml/xpathInternals.in.h \
 lib/libxml/xpointer.c \
 lib/libxml/xpointer.in.h \
+lib/markup.c \
+lib/markup.h \
 lib/memory-ostream.oo.c \
 lib/memory-ostream.oo.h \
 lib/moo.h \
@@ -229,12 +239,12 @@ lib/regex_internal.h.diff \
 lib/spawn-pipe.c.diff \
 lib/styled-ostream.oo.c \
 lib/styled-ostream.oo.h \
+lib/termcap.h \
+lib/terminfo.h \
 lib/term-ostream.oo.c \
 lib/term-ostream.oo.h \
 lib/term-styled-ostream.oo.c \
 lib/term-styled-ostream.oo.h \
-lib/termcap.h \
-lib/terminfo.h \
 lib/tparm.c \
 lib/tputs.c \
 lib/unistd.in.h.diff \
@@ -249,15 +259,17 @@ m4/alloca.m4 \
 m4/backupfile.m4 \
 m4/curses.m4 \
 m4/gcj.m4 \
+m4/java.m4 \
 m4/libcroco.m4 \
 m4/libglib.m4 \
 m4/libxml.m4 \
-m4/java.m4 \
 m4/moo.m4 \
 m4/termcap.m4 \
 m4/terminfo.m4 \
 m4/term-ostream.m4 \
 m4/unionwait.m4 \
+Makefile \
+Makefile.in \
 modules/backupfile \
 modules/basename \
 modules/closeout \
@@ -276,6 +288,7 @@ modules/java \
 modules/libcroco \
 modules/libglib \
 modules/libxml \
+modules/markup \
 modules/memory-ostream \
 modules/moo \
 modules/moo-tests \
@@ -307,21 +320,22 @@ tests/test-moo-sub2.oo.c \
 tests/test-moo-sub2.oo.h \
 tests/test-term-ostream.c \
 tests/test-term-ostream-xterm \
-tests/test-term-ostream-xterm-r6.out \
-tests/test-term-ostream-xterm-xf86-v32.out \
-tests/test-term-ostream-xterm-basic.out \
-tests/test-term-ostream-xterm-basic-italic.out \
+tests/test-term-ostream-xterm-16color.out \
+tests/test-term-ostream-xterm-256color.out \
+tests/test-term-ostream-xterm-88color.out \
 tests/test-term-ostream-xterm-8bit.out \
+tests/test-term-ostream-xterm-aix51.out \
+tests/test-term-ostream-xterm-basic-italic.out \
+tests/test-term-ostream-xterm-basic.out \
+tests/test-term-ostream-xterm-freebsd101.out \
+tests/test-term-ostream-xterm-irix65.out \
 tests/test-term-ostream-xterm-linux-debian.out \
 tests/test-term-ostream-xterm-linux-mandriva.out \
-tests/test-term-ostream-xterm-netbsd3.out \
-tests/test-term-ostream-xterm-solaris10.out \
-tests/test-term-ostream-xterm-aix51.out \
-tests/test-term-ostream-xterm-osf51.out \
-tests/test-term-ostream-xterm-irix65.out \
 tests/test-term-ostream-xterm-mingw.out \
-tests/test-term-ostream-xterm-16color.out \
-tests/test-term-ostream-xterm-88color.out \
-tests/test-term-ostream-xterm-256color.out
+tests/test-term-ostream-xterm-netbsd3.out \
+tests/test-term-ostream-xterm-osf51.out \
+tests/test-term-ostream-xterm-r6.out \
+tests/test-term-ostream-xterm-solaris10.out \
+tests/test-term-ostream-xterm-xf86-v32.out
 
 maintainer-update-po:
