Drop the nickname "woe32".
* README.windows: Renamed from README.woe32.
* Makefile.am (EXTRA_DIST): Update.
* gettext-runtime/README.windows: Renamed from gettext-runtime/README.woe32.
* gettext-runtime/Makefile.am (EXTRA_DIST): Update.
* gettext-runtime/intl/README.windows: Renamed from gettext-runtime/intl/README.woe32.
* gettext-runtime/intl/Makefile.in (DISTFILES.gettext): Update.
* gettext-runtime/libasprintf/README.windows: Renamed from gettext-runtime/libasprintf/README.woe32.
* gettext-runtime/libasprintf/Makefile.am (EXTRA_DIST): Update.
* gettext-tools/README.windows: Renamed from gettext-tools/README.woe32.
* gettext-tools/Makefile.am (EXTRA_DIST): Update.

--- a/Makefile.am
+++ b/Makefile.am
@@ -144,9 +144,9 @@ EXTRA_DIST += djgpp/COPYING.DJ djgpp/Makefile.maint djgpp/README.DJ \
 EXTRA_DIST += os2/README.OS2 os2/Makefile os2/backward.def os2/configure.awk
 
 
-# Woe32 support.
+# Windows support.
 
-EXTRA_DIST += README.woe32 windows/windres-options windows/gettext.rc
+EXTRA_DIST += README.windows windows/windres-options windows/gettext.rc
 
 # Versioning based on Git release tags.
 
