Support for Automake targets install-{dvi,ps,pdf,html}.
Reported by Eric Blake at https://debbugs.gnu.org/cgi/bugreport.cgi?bug=25690
via Assaf Gordon.

* gettext-runtime/po/Makefile.in.in (install-dvi, install-ps, install-pdf,
install-html): New empty targets.

--- a/gettext-runtime/po/Makefile.in.in
+++ b/gettext-runtime/po/Makefile.in.in
@@ -375,6 +375,8 @@ check: all
 
 info dvi ps pdf html tags TAGS ctags CTAGS ID:
 
+install-dvi install-ps install-pdf install-html:
+
 mostlyclean:
 	rm -f remove-potcdate.sed
 	rm -f stamp-poT
