Remove the ability to compile the Java programs to native executables.
This ability relied on GCJ, and GCJ was removed from GCC in version 7.1.

* gnulib-local/modules/gcj: Remove file.
* gnulib-local/m4/gcj.m4: Remove file.
* gnulib-local/Makefile.am (EXTRA_DIST): Remove both.
* gnulib-local/m4/java.m4 (gt_JAVA_CHOICE): Map value 'bytecode' to 'yes'.

* autogen.sh (GNULIB_MODULES_TOOLS_OTHER): Remove 'gcj'.
* gettext-tools/configure.ac: Don't invoke gt_GCJ. Don't set BUILDJAVAEXE.
* gettext-tools/src/Makefile.am (DEFS): Remove USEJEXE, GETTEXTJEXEDIR defines.
(GCJ, GCJFLAGS): Remove variables.
(USEJAVA, USEJEXE): Assume BUILDJAVAEXE is false.
(all-java-*, install-data-java-*, installdirs-java-*, uninstall-java-*): Remove
targets that assume BUILDJAVAEXE = true. Rename remaining targets.
(install-exec-java-*): Remove targets.
* gettext-tools/src/read-java.c (msgdomain_read_java: Assume USEJEXE is false.
* gettext-tools/src/urlget.c (fetch): Likewise.
* gettext-tools/tests/msgunfmt-java-1: Don't set GETTEXTJEXEDIR.
* PACKAGING (Java support): Drop text about native executables.

* gettext-tools/m4/Makefile.am (examplesbuildaux_DATA): Remove gcj.m4.
* gettext-tools/examples/hello-java*/autogen.sh: Don't copy gcj.m4.
* gettext-tools/examples/hello-java*/autoclean.sh: Don't remove m4/gcj.m4.
* gettext-tools/examples/hello-java*/m4/Makefile.am (EXTRA_DIST): Remove
gcj.m4.
* gettext-tools/examples/hello-java*/configure.ac: Don't invoke gt_GCJ,
AC_PROG_RANLIB. Remove option --enable-java-exe. Don't set BUILDJAVAEXE. Don't
set USEJEXE.
* gettext-tools/examples/hello-java*/Makefile.am (GCJ, GCJFLAGS, AR, RANLIB):
Remove variables.
[USEJEXE]: Remove section.

--- a/gettext-tools/m4/Makefile.am
+++ b/gettext-tools/m4/Makefile.am
@@ -41,7 +41,7 @@ aclocal_DATA = \
 
 examplesbuildauxdir = $(docdir)/examples/build-aux
 examplesbuildaux_DATA = \
-  ../gnulib-m4/gcj.m4 ../gnulib-m4/javacomp.m4 ../gnulib-m4/javaexec.m4 \
+  ../gnulib-m4/javacomp.m4 ../gnulib-m4/javaexec.m4 \
   ../gnulib-m4/csharpcomp.m4 ../gnulib-m4/csharpexec.m4 csharpexec-test.exe
 
 # Generate this list with
