Respect the configure option --localedir.
Reported by Markus Gothe at https://savannah.gnu.org/bugs/index.php?49862 .

The AC_SUBSTed variable @localedir@ is supported since Autoconf 2.60.

* gettext-runtime/intl/Makefile.in (localedir): Set to @localedir@. Suggested
by Markus Gothe <nietzsche@lysator.liu.se>.
* gettext-runtime/m4/intldir.m4: Require Autoconf 2.60 or newer.
* gettext-tools/doc/gettext.texi (src/Makefile): Assume Autoconf 2.60 or newer.

--- a/gettext-runtime/intl/Makefile.in
+++ b/gettext-runtime/intl/Makefile.in
@@ -1,5 +1,5 @@
 # Makefile for directory with message catalog handling library of GNU gettext
-# Copyright (C) 1995-1998, 2000-2007, 2009-2016 Free Software Foundation, Inc.
+# Copyright (C) 1995-1998, 2000-2007, 2009-2017 Free Software Foundation, Inc.
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Lesser General Public License as published by
@@ -42,7 +42,7 @@ libdir = @libdir@
 includedir = @includedir@
 datarootdir = @datarootdir@
 datadir = @datadir@
-localedir = $(datadir)/locale
+localedir = @localedir@
 gettextsrcdir = $(datadir)/gettext/intl
 aliaspath = $(localedir)
 subdir = intl
